cambio titulo de pagina index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="/assets/css/estilos.css">
     <link rel="stylesheet" href="estilo.css"> 
-    <title>Document</title>
+    <title>Tecno-Chile</title>
 
 </head>
 <body >
