--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 </head>
 <body >
+  <div class="loader_bg">
+    <div class="loader"><img src="assets/img/loadingtech2.gif" alt="#" /></div>
+ </div>
   <div class="d-flex">
     <div class="p-2 bg-info flex-fill">
         <a class="navbar-brand" href="index.html">
@@ -179,6 +182,51 @@
                     This is a wider card with supporting text below as a natural lead-in to
                     additional content. This card has even longer content than the first to show
                     that equal height action.
+                  </p>
+                </div>
+                <div class="card-footer" style="background-color: #00aeef ; color: #FFFFFF;">
+                  <small class="" style="background-color: #00aeef ; color: #FFFFFF;">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/imagenes-chicas/vrchico.jpg" class="card-img-top" alt="Skyscrapers"/>
+                <div class="card-body">
+                  <h5 class="card-title">VR PS5</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in to
+                    additional content. This content is a little bit longer.
+                  </p>
+                </div>
+                <div class="card-footer" style="background-color: #00aeef ; color: #FFFFFF;">
+                  <small class="" style="background-color: #00aeef ; color: #FFFFFF;">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/imagenes-chicas/controlchico.jpg" class="card-img-top" alt="Skyscrapers"/>
+                <div class="card-body">
+                  <h5 class="card-title">Joystick</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in to
+                    additional content. This content is a little bit longer.
+                  </p>
+                </div>
+                <div class="card-footer" style="background-color: #00aeef ; color: #FFFFFF;">
+                  <small class="" style="background-color: #00aeef ; color: #FFFFFF;">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/imagenes-chicas/minichico.jpg" class="card-img-top" alt="Skyscrapers"/>
+                <div class="card-body">
+                  <h5 class="card-title">Mini teclado gamer</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in to
+                    additional content. This content is a little bit longer.
                   </p>
                 </div>
                 <div class="card-footer" style="background-color: #00aeef ; color: #FFFFFF;">
