Cambio en suscripcion y texto productos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </div>
 
     <div class="p-2 bg-warning flex-fill">
-        </li>
         <div class="nav-item">
             <a class="nav-link" href="#"><strong>Nuestra Empresa</strong></a>
         </div>
@@ -51,14 +50,14 @@
                     placeholder="Nombre"></div>
             <div class="form-group"><input class="form-control" type="text" id="apellidos" name="apellidos"
                     placeholder="Apellidos"></div>
-            <div><input type="submit" value="Registrar" class="btn-enviar pointer"></div>
+            <div><input type="submit" value="Suscribete" class="btn-enviar pointer"></div>
 
 
         </form>
     </div>
 
-    <div class="p-2 bg-success text-white flex-fill">
-        <label id="resultado"></label>
+    <div class="p-2 bg-primary text-white flex-fill">
+        <label id="resultado" style="display: none"></label>
     </div>
 
 </div>
